--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
           cache-dependency-path: web/package.json
       - name: Install
         working-directory: web
-        run: npm ci
+        run: npm install --no-fund --no-audit
       - name: Lint
         working-directory: web
         run: npm run lint
