--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -26,8 +26,15 @@ jobs:
         uses: github/codeql-action/init@v3
         with:
           languages: ${{ matrix.language }}
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
+      - name: Build (C++)
+        if: matrix.language == 'cpp'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake ninja-build clang-tidy
+          cmake -S engine -B engine/build -G Ninja -DVERITY_ENGINE_BUILD_TESTS=ON
+          cmake --build engine/build --config Release
+          ctest --test-dir engine/build --output-on-failure
+          cmake -S desktop -B desktop/build -G Ninja
+          cmake --build desktop/build --config Release
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
-
