--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,8 @@ target-version = ["py310", "py311"]
 [tool.ruff]
 line-length = 100
 target-version = "py311"
+
+[tool.ruff.lint]
 select = [
   "E","F","W","I","UP","S","B","C4","SIM","ERA","Q","PL",
 ]
@@ -34,4 +36,3 @@ ignore = ["S101"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-
