--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
         working-directory: backend
         run: |
           python -m pip install --upgrade pip
+          python -m pip install --upgrade setuptools
           pip install -e .[dev]
       - name: Lint & Format check
         working-directory: backend
