fix lint errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -230,4 +230,4 @@ jobs:
       - name: Lint & Format check
         run: |
           ruff check scripts
-          black --check scripts
+          black --check -l 100 scripts
