--- a/desktop/build-msvc/verity_desktop.vcxproj.filters
+++ b/desktop/build-msvc/verity_desktop.vcxproj.filters
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <ClCompile Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\build-msvc\verity_desktop_autogen\mocs_compilation_Debug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\src\command.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -8,6 +11,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\src\replay.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\build-msvc\verity_desktop_autogen\mocs_compilation_Release.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\build-msvc\verity_desktop_autogen\mocs_compilation_MinSizeRel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\build-msvc\verity_desktop_autogen\mocs_compilation_RelWithDebInfo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
