--- a/desktop/build-msvc/verity_qt_shell.vcxproj.filters
+++ b/desktop/build-msvc/verity_qt_shell.vcxproj.filters
@@ -1,14 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <ClCompile Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\build-msvc\verity_qt_shell_autogen\mocs_compilation_Debug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\src\main_qt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\src\viewport\ViewportWidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\build-msvc\verity_qt_shell_autogen\mocs_compilation_Release.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\build-msvc\verity_qt_shell_autogen\mocs_compilation_MinSizeRel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\build-msvc\verity_qt_shell_autogen\mocs_compilation_RelWithDebInfo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\include\viewport\ViewportWidget.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="C:\Users\gonca\Desktop\repos\dronity_\desktop\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
+    <Filter Include="Header Files">
+      <UniqueIdentifier>{C45C4A70-D9A4-358F-9886-F543D0FCFD33}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Source Files">
       <UniqueIdentifier>{BBC76EB7-46EA-3D6B-8F49-FD8284E17BB0}</UniqueIdentifier>
     </Filter>
